--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<html>
-  <head>
-  <!--定时转到其他页面 -->
-  <meta http-equiv="refresh" content="5;url=https://williamyao.com">
-  </head>
-  <body>
-    正在跳转至HTTPS加密链接
-  </body>
-</html>
+FUA
