--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-FUA
+<html>
+  <head>
+  <!--定时转到其他页面 -->
+  <meta http-equiv="refresh" content="1";url=https://bj.williamyao.com">
+  </head>
+  <body>
+    正在跳转至CDN北京节点HTTPS加密链接
+  </body>
+</html>
