--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="refresh" content="1;url=https://williamyao.com">
   </head>
   <body>
-    正在跳转至CDN北京节点HTTPS加密链接
+    正在跳转至CDN北京节点HTTPS加密链接<br />
+    若没有反应，请点击链接：<a href='https://williamyao.com'>https://williamyao.com</a>
   </body>
 </html>
