Redirect to blog.williamyao.com

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
   <!--定时转到其他页面 -->
-  <meta http-equiv="refresh" content="1;url=https://williamyao.com">
+  <meta http-equiv="refresh" content="1;url=https://blog.williamyao.com">
   </head>
   <body>
     正在跳转至CDN北京节点HTTPS加密链接<br />
-    若没有反应，请点击链接：<a href='https://williamyao.com'>https://williamyao.com</a>
+    若没有反应，请点击链接：<a href='https://blog.williamyao.com'>https://blog.williamyao.com</a>
   </body>
 </html>
